# GladiusGUI

./: Cargo.toml  README.md
langs/: en_US.json
src/: main.rs  model.rs  object.rs  shaders.rs
