[package]
name = "GladiusGUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.16.1"

# Backend-agnostic interface for writing apps using egui
epi = "0.16.0"
# Winit integration with egui
egui_winit_platform = "0.13.0"
# logging
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
# Linear algebra library
glam = "0.20.0"

# Windowing
winit = "0.26"

native-dialog = "0.5.5"

egui_glium = "0.16.0"
glium = "0.31.0"

nom_stl = "0.2.2"

gladius_shared = { git = "https://github.com/GladiusSlicer/GladiusSlicer", branch = "Dev" }

serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.13.1"
